@@ -1,8 +1,11 @@
 Changes since version 1.2.0
 ---------------------------
 
-- Fixed a bug that could cause an abort if communicators were
-  created and destroyed in rapid succession.
+- Fixed a rare deadlock in the object adapter, when a locator was
+  used.
+
+- Fixed a bug that could cause an abort if communicators were created
+  and destroyed in rapid succession.
 
 - Fixed transformdb to take separate arguments for specifying
   include paths. The option -I has been replaced with the options
